--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,25 @@
 {
 	"include": [".eslintrc.cjs", "src/**/*"],
 	"compilerOptions": {
+		"outDir": "./dist",
+		"module": "esnext",
+		"target": "esnext",
+		"lib": ["esnext"],
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
 		"baseUrl": ".",
+		"declarationDir": "./types",
 		"alwaysStrict": true,
+		"declaration": true,
 		"strict": true,
 		"strictNullChecks": true,
 		"preserveConstEnums": true,
-		"sourceMap": false,
+		"sourceMap": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": false,
 		"noUncheckedIndexedAccess": true,
 		"noImplicitAny": true,
 		"allowUmdGlobalAccess": true,
-		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"noErrorTruncation": true,
 		"paths": {
