--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
 	"version": "0.0.1",
 	"description": "unofficial solidjs wrapper around the rive-js library",
 	"main": "dist/index.js",
-	"typings": "dist/types/index.d.ts",
+	"types": "types/index.d.ts",
 	"files": [
 		"dist/**"
 	],
 	"scripts": {
-		"dev": "",
-		"build": "",
-		"lint": "",
-		"lint:fix": "",
-		"typecheck": ""
+		"build": "tsc",
+		"typecheck": "npx tsc",
+		"lint": "npx eslint . --ext .cjs,.mjs,.js,.jsx,.ts,.tsx",
+		"lint:fix": "npx eslint --fix . --ext .cjs,.mjs,.js,.jsx,.ts,.tsx"
 	},
 	"repository": {
 		"type": "git",
@@ -24,7 +23,6 @@
 		"url": "https://github.com/228-Aerofoil/rive-solid-canvas/issues"
 	},
 	"homepage": "https://github.com/228-Aerofoil/rive-solid-canvas#readme",
-	"dependencies": {},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.39.0",
 		"@typescript-eslint/parser": "^5.39.0",
@@ -36,6 +34,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-solid": "^0.7.3",
 		"prettier": "^2.7.1",
-		"typescript": "^4.9.5"
+		"typescript": "^4.9.5",
+		"watch": "^1.0.2"
 	}
 }
