--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,7 @@
 	"include": [".eslintrc.cjs", "src/**/*"],
 	"compilerOptions": {
 		"outDir": "./dist",
-		"module": "esnext",
-		"target": "esnext",
-		"lib": ["esnext"],
+		"lib": ["esnext", "dom"],
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
 		"baseUrl": ".",
