--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2
+        with:
+          version: 7.27.0
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
       - name: Run lint
