--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rive-solid-canvas",
+	"name": "@aerofoil/rive-solid-canvas",
 	"version": "0.0.0",
 	"description": "unofficial solidjs wrapper around the rive-js library",
 	"main": "dist/index.js",
