--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 		"types"
 	],
 	"scripts": {
-		"build": "tsc",
-		"typecheck": "npx tsc",
+		"build": "npx tsc",
+		"typecheck": "npx tsc --noEmit",
 		"lint": "npx eslint . --ext .cjs,.mjs,.js,.jsx,.ts,.tsx",
-		"lint:fix": "npx eslint --fix . --ext .cjs,.mjs,.js,.jsx,.ts,.tsx"
+		"lint:fix": "npx eslint --fix . --ext .cjs,.mjs,.js,.jsx,.ts,.tsx",
+		"publish": "pnpm run build && pnpm publish"
 	},
 	"repository": {
 		"type": "git",
