--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
       - name: Publish
-        run: pnpm publish
+        run: pnpm publish:ga
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
