--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": [".eslintrc.cjs", "src/**/*"],
+	"include": [".eslintrc.cjs", "src/**/*", "vite.config.ts"],
 	"compilerOptions": {
 		"outDir": "./dist",
 		"lib": ["esnext", "dom"],
@@ -16,9 +16,11 @@
 		"esModuleInterop": true,
 		"experimentalDecorators": false,
 		"noUncheckedIndexedAccess": true,
+		"types": ["node"],
 		"noImplicitAny": true,
 		"allowUmdGlobalAccess": true,
 		"skipLibCheck": true,
+		"resolveJsonModule": true,
 		"noErrorTruncation": true,
 		"paths": {
 			"@/*": ["./src/*"]
