--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	],
 	"packageManager": "^pnpm@7.27.0",
 	"devDependencies": {
+		"@types/node": "^18.14.0",
 		"@typescript-eslint/eslint-plugin": "^5.39.0",
 		"@typescript-eslint/parser": "^5.39.0",
 		"eslint": "^8.25.0",
