--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "@aerofoil/rive-solid-canvas",
-	"version": "1.1.1",
+	"version": "1.1.2",
 	"description": "unofficial solidjs wrapper around the rive-js library",
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.mjs",
 	"files": [
 		"dist/**",
 		"types"
@@ -34,7 +34,7 @@
 	"exports": {
 		".": {
 			"import": "./dist/index.mjs",
-			"require": "./dist/solid.cjs",
+			"require": "./dist/index.cjs",
 			"types": "./types/index.d.ts"
 		},
 		"./dist/*": "./dist/*"
