--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
 	},
 	"exports": {
 		".": {
+			"types": "./types/index.d.ts",
 			"import": "./dist/index.mjs",
-			"require": "./dist/index.cjs",
-			"types": "./types/index.d.ts"
+			"require": "./dist/index.cjs"
 		},
 		"./dist/*": "./dist/*"
 	},
